--- a/static/chatbot-admin/css/common.css
+++ b/static/chatbot-admin/css/common.css
@@ -67,6 +67,7 @@ html {
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: "Inter", "Pretendard Variable", Pretendard, sans-serif;
   font-size: 13px;
   color: #333;
   letter-spacing: -0.045em !important;
@@ -153,4 +154,10 @@ img {
   -khtml-user-drag: none;
   -moz-user-drag: none;
   -o-user-drag: none;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+  display: flex;
 }
