--- a/templates/chatbot-admin/menu01.html
+++ b/templates/chatbot-admin/menu01.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../static/chatbot-admin/css/common.css" />
-    <link rel="stylesheet" href="../../static/chatbot-admin/css/nav_bar.css" />
-    <link rel="stylesheet" href="../../static/chatbot-admin/css/content.css" />
+    <link rel="stylesheet" href="../../static/chatbot-admin/css/menu01.css" />
     <title>admin</title>
   </head>
   <body>
@@ -16,41 +15,29 @@
           <span class="navbar__title-text">MENU</span>
         </div>
         <div class="navbar__menu-container">
-          <a href="menu01.html"
-            ><div class="navbar__menu-item">
-              <span class="navbar__menu-item-text">사용 기록 조회</span>
-            </div></a
+          <a href="#" class="navbar__menu-item navbar__menu-item--active">
+            <span class="navbar__menu-item-text navbar__menu-item-text--active"
+              >사용 기록 조회</span
+            ></a
           >
-          <a href="menu02.html"
-            ><div class="navbar__menu-item">
-              <span class="navbar__menu-item-text">컨텐츠 수정</span>
-            </div></a
+          <a href="#" class="navbar__menu-item">
+            <span class="navbar__menu-item-text">컨텐츠 수정</span></a
           >
-          <a href="menu03.html"
-            ><div class="navbar__menu-item">
-              <span class="navbar__menu-item-text">다국어 지원 설정</span>
-            </div></a
-          >
-          <a href="menu04.html"
-            ><div class="navbar__menu-item">
-              <span class="navbar__menu-item-text">입점사 관리</span>
-            </div></a
-          >
-          <a href="menu05.html"
-            ><div class="navbar__menu-item">
-              <span class="navbar__menu-item-text">SMS 메시지 관리</span>
-            </div></a
-          >
-          <a href="menu06.html"
-            ><div class="navbar__menu-item">
-              <span class="navbar__menu-item-text">결제 내역 조회</span>
-            </div></a
-          >
-          <a href="menu07.html"
-            ><div class="navbar__menu-item">
-              <span class="navbar__menu-item-text">대행 신청 업체</span>
-            </div></a
-          >
+          <a href="#" class="navbar__menu-item">
+            <span class="navbar__menu-item-text">다국어 지원 설정</span>
+          </a>
+          <a href="#" class="navbar__menu-item">
+            <span class="navbar__menu-item-text">입점사 관리</span>
+          </a>
+          <a href="#" class="navbar__menu-item">
+            <span class="navbar__menu-item-text">SMS 메시지 관리</span>
+          </a>
+          <a href="#" class="navbar__menu-item">
+            <span class="navbar__menu-item-text">결제 내역 조회</span>
+          </a>
+          <a href="#" class="navbar__menu-item">
+            <span class="navbar__menu-item-text">대행 신청 업체</span>
+          </a>
         </div>
       </nav>
 
@@ -62,6 +49,10 @@
         </header>
         <!-- 메인 컨텐츠 -->
         <section class="main__content">
+          <!-- 사용 기록 조회 컨텐츠 (menu01) -->
+          <div class="usage-history__container"></div>
+
+          <!-- 페이지네이션 -->
           <div class="pagination">
             <button class="pagination__button-prev">
               <svg
@@ -110,6 +101,7 @@
         </section>
       </div>
     </div>
+    <script src="../../static/chatbot-admin/js/navbar.js"></script>
     <script src="../../static/chatbot-admin/js/pagination.js"></script>
   </body>
 </html>
