--- a/static/chatbot-admin/css/common.css
+++ b/static/chatbot-admin/css/common.css
@@ -192,6 +192,7 @@ img {
   font-weight: 600;
   letter-spacing: 0.05em;
   text-transform: uppercase;
+  user-select: none;
 }
 
 .navbar__menu-container {
@@ -222,6 +223,7 @@ img {
   font-size: 15px;
   font-weight: 500;
   letter-spacing: 0.05em;
+  user-select: none;
 }
 
 .navbar__menu-item--active span {
@@ -257,6 +259,7 @@ img {
   line-height: 1.35;
   color: #1b3133;
   font-weight: 700;
+  user-select: none;
 }
 
 .main__content {
@@ -268,15 +271,16 @@ img {
 }
 
 .pagination {
-  position: absolute;
+  position: fixed;
   left: 50%;
-  bottom: 50px;
+  bottom: 20px;
   display: flex;
-  width: 290px;
-  height: 45px;
+  width: 250px;
+  height: 35px;
   justify-content: center;
   align-items: center;
   background-color: #fff;
+  z-index: 1000;
 }
 
 .pagination__button-prev {
@@ -298,6 +302,7 @@ img {
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out,
     -webkit-box-shadow 0.15s ease-in-out;
+  user-select: none;
 
   &:hover {
     color: #fff;
@@ -325,6 +330,7 @@ img {
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out,
     -webkit-box-shadow 0.15s ease-in-out;
+  user-select: none;
 
   &:hover {
     color: #fff;
@@ -355,6 +361,7 @@ img {
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out,
     -webkit-box-shadow 0.15s ease-in-out;
+  user-select: none;
 
   &:hover {
     color: #fff;
