--- a/static/chatbot-admin/css/menu01.css
+++ b/static/chatbot-admin/css/menu01.css
@@ -1,4 +1,156 @@
 .usage-history__container {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  height: calc(100% - 50px);
+}
+
+.search-bar {
+  display: flex;
+  width: 100%;
+  height: 60px;
+  justify-content: flex-end;
+  align-items: flex-start;
+}
+
+.search-bar__category-dropdown {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 120px;
+  height: 35px;
+  border: 1px solid #d4d4d4;
+  border-radius: 8px;
+  margin-right: 20px;
+  background-color: #fff;
+  cursor: pointer;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
+}
+
+.search-bar__category-dropdown-select {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-right: 10px;
+  font-size: 13px;
+  font-weight: 600;
+  color: #1b3133;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  appearance: none;
+  user-select: none;
+}
+
+.search-bar__category-dropdown-icon {
+  position: absolute;
+  right: 5px;
+  pointer-events: none;
+}
+
+.search-bar__input-container {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  height: 100%;
+}
+
+.search-bar__input {
+  display: flex;
+  width: 100%;
+  height: 35px;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 6px;
+  border: 1px solid #d4d4d4;
+  border-radius: 8px;
+  padding: 0 12px;
+  background-color: #fff;
+}
+
+.search-bar__input-box {
+  display: flex;
+  width: 140px;
+  height: 90%;
+  color: #1b3133;
+  font-size: 13px;
+  font-weight: 600;
+  border: none;
+  outline: none;
+}
+
+.search-bar__input-icon {
+  display: flex;
+  cursor: pointer;
+}
+
+.search-bar__input-warning {
+  display: flex;
+  font-size: 11px;
+  font-weight: 600;
+  margin-left: 8px;
+  color: #1b3133;
+  transition: color 0.3s;
+  user-select: none;
+}
+
+.usage-history__table {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  margin-top: 20px;
+  border: 1px solid #d4d4d4;
+  border-radius: 8px;
+  background-color: #fff;
+  overflow: auto;
+}
+
+.usage-history__table-container {
+  display: flex;
+  width: 100%;
+  height: auto;
+  padding: 8px 0;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #d4d4d4;
+}
+
+.usage-history__table-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  font-weight: 600;
+  text-align: center;
+  padding: 0 16px;
+}
+
+.usage-history__table-item--no {
+  width: 5%;
+}
+
+.usage-history__table-item--date {
+  width: 15%;
+}
+
+.usage-history__table-item--language {
+  width: 10%;
+}
+
+.usage-history__table-item--gpt {
+  width: 15%;
+}
+
+.usage-history__table-item--category {
+  width: 30%;
+}
+
+.usage-history__table-item--download {
+  width: 25%;
 }
