--- a/static/chatbot-admin/css/common.css
+++ b/static/chatbot-admin/css/common.css
@@ -265,7 +265,7 @@ img {
 .main__content {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 70px);
   padding: 30px;
   background-color: rgb(236, 240, 244);
 }
