--- a/templates/chatbot-admin/menu01.html
+++ b/templates/chatbot-admin/menu01.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../static/chatbot-admin/css/common.css" />
     <link rel="stylesheet" href="../../static/chatbot-admin/css/menu01.css" />
-    <title>admin</title>
+    <title>사용 기록 조회</title>
   </head>
   <body>
     <div id="root">
@@ -15,27 +15,30 @@
           <span class="navbar__title-text">MENU</span>
         </div>
         <div class="navbar__menu-container">
-          <a href="#" class="navbar__menu-item navbar__menu-item--active">
+          <a
+            href="menu01.html"
+            class="navbar__menu-item navbar__menu-item--active"
+          >
             <span class="navbar__menu-item-text navbar__menu-item-text--active"
               >사용 기록 조회</span
             ></a
           >
-          <a href="#" class="navbar__menu-item">
+          <a href="menu02.html" class="navbar__menu-item">
             <span class="navbar__menu-item-text">컨텐츠 수정</span></a
           >
-          <a href="#" class="navbar__menu-item">
+          <a href="menu03.html" class="navbar__menu-item">
             <span class="navbar__menu-item-text">다국어 지원 설정</span>
           </a>
-          <a href="#" class="navbar__menu-item">
+          <a href="menu04.html" class="navbar__menu-item">
             <span class="navbar__menu-item-text">입점사 관리</span>
           </a>
-          <a href="#" class="navbar__menu-item">
+          <a href="menu05.html" class="navbar__menu-item">
             <span class="navbar__menu-item-text">SMS 메시지 관리</span>
           </a>
-          <a href="#" class="navbar__menu-item">
+          <a href="menu06.html" class="navbar__menu-item">
             <span class="navbar__menu-item-text">결제 내역 조회</span>
           </a>
-          <a href="#" class="navbar__menu-item">
+          <a href="menu07.html" class="navbar__menu-item">
             <span class="navbar__menu-item-text">대행 신청 업체</span>
           </a>
         </div>
@@ -261,61 +264,59 @@
                   </td>
                 </tr>
               </tbody>
-              <!-- 페이지네이션 -->
-              <div class="pagination">
-                <button class="pagination__button-prev">
-                  <svg
-                    width="20"
-                    height="20"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M12 18L6 12L12 6"
-                      stroke="#1b00ff"
-                      stroke-width="1.5"
-                    />
-                    <path
-                      d="M18 18L12 12L18 6"
-                      stroke="#1b00ff"
-                      stroke-width="1.5"
-                    />
-                  </svg>
-                </button>
-                <button class="pagination__button pagination__button--active">
-                  1
-                </button>
-                <button class="pagination__button">2</button>
-                <button class="pagination__button">3</button>
-                <button class="pagination__button">4</button>
-                <button class="pagination__button">5</button>
-                <button class="pagination__button-next">
-                  <svg
-                    width="20"
-                    height="20"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M12 18L18 12L12 6"
-                      stroke="#1b00ff"
-                      stroke-width="1.5"
-                    />
-                    <path
-                      d="M6 18L12 12L6 6"
-                      stroke="#1b00ff"
-                      stroke-width="1.5"
-                    />
-                  </svg>
-                </button>
-              </div>
             </table>
+          </div>
+          <!-- 페이지네이션 -->
+          <div class="pagination">
+            <button class="pagination__button-prev">
+              <svg
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12 18L6 12L12 6"
+                  stroke="#1b00ff"
+                  stroke-width="1.5"
+                />
+                <path
+                  d="M18 18L12 12L18 6"
+                  stroke="#1b00ff"
+                  stroke-width="1.5"
+                />
+              </svg>
+            </button>
+            <button class="pagination__button pagination__button--active">
+              1
+            </button>
+            <button class="pagination__button">2</button>
+            <button class="pagination__button">3</button>
+            <button class="pagination__button">4</button>
+            <button class="pagination__button">5</button>
+            <button class="pagination__button-next">
+              <svg
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12 18L18 12L12 6"
+                  stroke="#1b00ff"
+                  stroke-width="1.5"
+                />
+                <path d="M6 18L12 12L6 6" stroke="#1b00ff" stroke-width="1.5" />
+              </svg>
+            </button>
           </div>
         </section>
       </div>
     </div>
+
+    <!-- 자바스크립트 -->
     <script src="../../static/chatbot-admin/js/navbar.js"></script>
     <script src="../../static/chatbot-admin/js/pagination.js"></script>
     <script src="../../static/chatbot-admin/js/menu01.js"></script>
