--- a/templates/chatbot-admin/menu05.html
+++ b/templates/chatbot-admin/menu05.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../static/chatbot-admin/css/common.css" />
-    <link rel="stylesheet" href="../../static/chatbot-admin/css/menu02.css" />
+    <link rel="stylesheet" href="../../static/chatbot-admin/css/menu05.css" />
     <title>SMS 메시지 관리</title>
   </head>
   <body>
@@ -49,6 +49,55 @@
       <header class="header">
         <span class="header__menu-name">SMS 메시지 관리</span>
       </header>
+      <!-- 메인 컨텐츠 -->
+      <div class="main__content">
+        <!-- SMS 메시지 관리 (menu05) -->
+        <div class="sms-management">
+          <div class="sms-management__container">
+            <div class="sms-management__title">
+              <span class="sms-management__title-text">VISAYA24</span>
+            </div>
+            <div class="sms-management__subtext-container">
+              <span class="sms-management__subtext">전송 메시지</span>
+              <span class="sms-management__warning"
+                >* 45자 초과 시 LMS 비용이 청구됩니다.</span
+              >
+            </div>
+            <textarea name="" id="" class="sms-management__textarea">
+{고객명}님으로부터 {업무 내용} 요청이 도착하였습니다.  
+확인 후 업무 처리를 부탁드립니다.
+{사용자 정보}
+{사용자 기록}
+              </textarea
+            >
+            <div class="sms-management__save-button-container">
+              <button class="sms-management__save-button">저장</button>
+            </div>
+          </div>
+          <div class="sms-management__container">
+            <div class="sms-management__title">
+              <span class="sms-management__title-text">입점사</span>
+            </div>
+            <div class="sms-management__subtext-container">
+              <span class="sms-management__subtext">전송 메시지</span>
+              <span class="sms-management__warning"
+                >* 45자 초과 시 LMS 비용이 청구됩니다.</span
+              >
+            </div>
+            <textarea name="" id="" class="sms-management__textarea">
+안녕하세요 비자야입니다.
+{고객명}님으로부터 {업무 내용} 요청이 도착하였습니다.
+확인 후 업무 처리를 부탁드립니다.
+{사용자 정보}
+{사용자 기록}
+              </textarea
+            >
+            <div class="sms-management__save-button-container">
+              <button class="sms-management__save-button">저장</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- 자바스크립트 -->
