--- a/static/chatbot-admin/css/common.css
+++ b/static/chatbot-admin/css/common.css
@@ -252,10 +252,11 @@ img {
   background-color: #fff;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease-in-out;
+  z-index: 1000;
 }
 
 .header__menu-name {
-  font-size: 20px;
+  font-size: 22px;
   line-height: 1.35;
   color: #1b3133;
   font-weight: 700;
