--- a/templates/chatbot-admin/menu05.html
+++ b/templates/chatbot-admin/menu05.html
@@ -50,7 +50,7 @@
         <span class="header__menu-name">SMS 메시지 관리</span>
       </header>
       <!-- 메인 컨텐츠 -->
-      <div class="main__content">
+      <section class="main__content">
         <!-- SMS 메시지 관리 (menu05) -->
         <div class="sms-management">
           <div class="sms-management__container">
@@ -64,11 +64,10 @@
               >
             </div>
             <textarea name="" id="" class="sms-management__textarea">
-{고객명}님으로부터 {업무 내용} 요청이 도착하였습니다.  
+{고객명}님으로부터 {업무 내용} 요청이 도착하였습니다.
 확인 후 업무 처리를 부탁드립니다.
 {사용자 정보}
-{사용자 기록}
-              </textarea
+{사용자 기록}</textarea
             >
             <div class="sms-management__save-button-container">
               <button class="sms-management__save-button">저장</button>
@@ -89,15 +88,14 @@
 {고객명}님으로부터 {업무 내용} 요청이 도착하였습니다.
 확인 후 업무 처리를 부탁드립니다.
 {사용자 정보}
-{사용자 기록}
-              </textarea
+{사용자 기록}</textarea
             >
             <div class="sms-management__save-button-container">
               <button class="sms-management__save-button">저장</button>
             </div>
           </div>
         </div>
-      </div>
+      </section>
     </div>
 
     <!-- 자바스크립트 -->
