--- a/templates/chatbot-admin/menu02.html
+++ b/templates/chatbot-admin/menu02.html
@@ -51,6 +51,281 @@
         <header class="header">
           <span class="header__menu-name">컨텐츠 수정</span>
         </header>
+        <!-- 컨텐츠 수정 (menu02) -->
+        <section class="content-modify">
+          <!-- 사이드바 (카테고리) -->
+          <div class="content-modify__sidebar">
+            <div class="content-modify__sidebar-title">
+              <span class="content-modify__sidebar-title-text"
+                >카테고리 검색</span
+              >
+            </div>
+            <!-- 1~5차 카테고리 드롭다운 -->
+            <div class="content-modify__sidebar-category-container">
+              <!-- 1차 카테고리 -->
+              <div class="content-modify__sidebar-category-item">
+                <span class="content-modify__sidebar-category-title"
+                  >1차 카테고리</span
+                >
+                <!-- 1차 카테고리 드롭다운 -->
+                <div class="search-bar__category-dropdown-container">
+                  <div class="search-bar__category-dropdown">
+                    <select
+                      id="categorySelect"
+                      class="search-bar__category-dropdown-select"
+                    >
+                      <option value="카테고리 명" selected hidden>
+                        카테고리 명
+                      </option>
+                      <option value="국내">국내</option>
+                      <option value="해외">해외</option>
+                      <option value="관련">관련</option>
+                      <option value="국적신청">국적신청</option>
+                    </select>
+                    <svg
+                      class="search-bar__category-dropdown-icon"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M11.8079 14.7695L8.09346 10.3121C7.65924 9.79109 8.02976 9 8.70803 9L15.292 9C15.9702 9 16.3408 9.79108 15.9065 10.3121L12.1921 14.7695C12.0921 14.8895 11.9079 14.8895 11.8079 14.7695Z"
+                        fill="#1b3133"
+                      />
+                    </svg>
+                  </div>
+                </div>
+              </div>
+              <!-- 2차 카테고리 -->
+              <div class="content-modify__sidebar-category-item">
+                <span class="content-modify__sidebar-category-title"
+                  >2차 카테고리</span
+                >
+                <!-- 2차 카테고리 드롭다운 -->
+                <div class="search-bar__category-dropdown-container">
+                  <div class="search-bar__category-dropdown">
+                    <select
+                      id="categorySelect"
+                      class="search-bar__category-dropdown-select"
+                    >
+                      <option value="카테고리 명" selected hidden>
+                        카테고리 명
+                      </option>
+                      <option value="국내">국내</option>
+                      <option value="해외">해외</option>
+                      <option value="관련">관련</option>
+                      <option value="국적신청">국적신청</option>
+                    </select>
+                    <svg
+                      class="search-bar__category-dropdown-icon"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M11.8079 14.7695L8.09346 10.3121C7.65924 9.79109 8.02976 9 8.70803 9L15.292 9C15.9702 9 16.3408 9.79108 15.9065 10.3121L12.1921 14.7695C12.0921 14.8895 11.9079 14.8895 11.8079 14.7695Z"
+                        fill="#1b3133"
+                      />
+                    </svg>
+                  </div>
+                </div>
+              </div>
+              <!-- 3차 카테고리 -->
+              <div class="content-modify__sidebar-category-item">
+                <span class="content-modify__sidebar-category-title"
+                  >3차 카테고리</span
+                >
+                <!-- 3차 카테고리 드롭다운 -->
+                <div class="search-bar__category-dropdown-container">
+                  <div class="search-bar__category-dropdown">
+                    <select
+                      id="categorySelect"
+                      class="search-bar__category-dropdown-select"
+                    >
+                      <option value="카테고리 명" selected hidden>
+                        카테고리 명
+                      </option>
+                      <option value="국내">국내</option>
+                      <option value="해외">해외</option>
+                      <option value="관련">관련</option>
+                      <option value="국적신청">국적신청</option>
+                    </select>
+                    <svg
+                      class="search-bar__category-dropdown-icon"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M11.8079 14.7695L8.09346 10.3121C7.65924 9.79109 8.02976 9 8.70803 9L15.292 9C15.9702 9 16.3408 9.79108 15.9065 10.3121L12.1921 14.7695C12.0921 14.8895 11.9079 14.8895 11.8079 14.7695Z"
+                        fill="#1b3133"
+                      />
+                    </svg>
+                  </div>
+                </div>
+              </div>
+              <!-- 4차 카테고리 -->
+              <div class="content-modify__sidebar-category-item">
+                <span class="content-modify__sidebar-category-title"
+                  >4차 카테고리</span
+                >
+                <!-- 4차 카테고리 드롭다운 -->
+                <div class="search-bar__category-dropdown-container">
+                  <div class="search-bar__category-dropdown">
+                    <select
+                      id="categorySelect"
+                      class="search-bar__category-dropdown-select"
+                    >
+                      <option value="카테고리 명" selected hidden>
+                        카테고리 명
+                      </option>
+                      <option value="국내">국내</option>
+                      <option value="해외">해외</option>
+                      <option value="관련">관련</option>
+                      <option value="국적신청">국적신청</option>
+                    </select>
+                    <svg
+                      class="search-bar__category-dropdown-icon"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M11.8079 14.7695L8.09346 10.3121C7.65924 9.79109 8.02976 9 8.70803 9L15.292 9C15.9702 9 16.3408 9.79108 15.9065 10.3121L12.1921 14.7695C12.0921 14.8895 11.9079 14.8895 11.8079 14.7695Z"
+                        fill="#1b3133"
+                      />
+                    </svg>
+                  </div>
+                </div>
+              </div>
+              <!-- 5차 카테고리 -->
+              <div class="content-modify__sidebar-category-item">
+                <span class="content-modify__sidebar-category-title"
+                  >5차 카테고리</span
+                >
+                <!-- 5차 카테고리 드롭다운 -->
+                <div class="search-bar__category-dropdown-container">
+                  <div class="search-bar__category-dropdown">
+                    <select
+                      id="categorySelect"
+                      class="search-bar__category-dropdown-select"
+                    >
+                      <option value="카테고리 명" selected hidden>
+                        카테고리 명
+                      </option>
+                      <option value="국내">국내</option>
+                      <option value="해외">해외</option>
+                      <option value="관련">관련</option>
+                      <option value="국적신청">국적신청</option>
+                    </select>
+                    <svg
+                      class="search-bar__category-dropdown-icon"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M11.8079 14.7695L8.09346 10.3121C7.65924 9.79109 8.02976 9 8.70803 9L15.292 9C15.9702 9 16.3408 9.79108 15.9065 10.3121L12.1921 14.7695C12.0921 14.8895 11.9079 14.8895 11.8079 14.7695Z"
+                        fill="#1b3133"
+                      />
+                    </svg>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- 조회 버튼 -->
+            <button class="content-modify__sidebar-search-button">조회</button>
+          </div>
+          <!-- 컨텐츠 수정 콘텐츠 -->
+          <div class="content-modify__content">
+            <!-- 업무 비용 -->
+            <div class="content-modify__charge">
+              <span class="content-modify__charge-title">업무 비용</span>
+              <!-- 서류작성 비용 -->
+              <div class="content-modify__charge-wrapper">
+                <span class="content-modify__charge-text">• 서류작성 : </span>
+                <span class="content-modify__charge-text money">10,000원</span>
+                <svg
+                  class="content-modify__charge-edit-icon"
+                  width="20"
+                  height="20"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M17.204 10.796L19 9C19.5453 8.45475 19.8179 8.18213 19.9636 7.88803C20.2409 7.32848 20.2409 6.67152 19.9636 6.11197C19.8179 5.81788 19.5453 5.54525 19 5C18.4548 4.45475 18.1821 4.18213 17.888 4.03639C17.3285 3.75911 16.6715 3.75911 16.112 4.03639C15.8179 4.18213 15.5453 4.45475 15 5L13.1814 6.81866C14.1452 8.46926 15.5314 9.84482 17.204 10.796ZM11.7269 8.27311L4.8564 15.1436C4.43134 15.5687 4.21881 15.7812 4.07907 16.0423C3.93934 16.3034 3.88039 16.5981 3.7625 17.1876L3.1471 20.2646C3.08058 20.5972 3.04732 20.7635 3.14193 20.8581C3.23654 20.9527 3.40284 20.9194 3.73545 20.8529L6.81243 20.2375C7.40189 20.1196 7.69661 20.0607 7.95771 19.9209C8.21881 19.7812 8.43134 19.5687 8.8564 19.1436L15.7458 12.2542C14.1241 11.2386 12.7524 9.87627 11.7269 8.27311Z"
+                    fill="#1b3133"
+                  />
+                </svg>
+              </div>
+              <!-- 업무대행 비용 -->
+              <div class="content-modify__charge-wrapper">
+                <span class="content-modify__charge-text">• 업무대행 : </span>
+                <span class="content-modify__charge-text money">20,000원</span>
+                <svg
+                  class="content-modify__charge-edit-icon"
+                  width="20"
+                  height="20"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M17.204 10.796L19 9C19.5453 8.45475 19.8179 8.18213 19.9636 7.88803C20.2409 7.32848 20.2409 6.67152 19.9636 6.11197C19.8179 5.81788 19.5453 5.54525 19 5C18.4548 4.45475 18.1821 4.18213 17.888 4.03639C17.3285 3.75911 16.6715 3.75911 16.112 4.03639C15.8179 4.18213 15.5453 4.45475 15 5L13.1814 6.81866C14.1452 8.46926 15.5314 9.84482 17.204 10.796ZM11.7269 8.27311L4.8564 15.1436C4.43134 15.5687 4.21881 15.7812 4.07907 16.0423C3.93934 16.3034 3.88039 16.5981 3.7625 17.1876L3.1471 20.2646C3.08058 20.5972 3.04732 20.7635 3.14193 20.8581C3.23654 20.9527 3.40284 20.9194 3.73545 20.8529L6.81243 20.2375C7.40189 20.1196 7.69661 20.0607 7.95771 19.9209C8.21881 19.7812 8.43134 19.5687 8.8564 19.1436L15.7458 12.2542C14.1241 11.2386 12.7524 9.87627 11.7269 8.27311Z"
+                    fill="#1b3133"
+                  />
+                </svg>
+              </div>
+            </div>
+            <!-- 서류 리스트 -->
+            <div class="content-modify__doc-list-container">
+              <div class="content-modify__form-doc-container">
+                <span class="content-modify__form-doc-title">양식서류</span>
+                <div class="content-modify__form-doc-checkbox-wrapper"></div>
+                <div class="content-modify__add-list-container">
+                  <span class="content-modify__add-list-title">목록 추가</span>
+                  <input
+                    type="text"
+                    class="content-modify__add-list-input form"
+                    placeholder="텍스트 입력"
+                  />
+                  <button class="content-modify__add-list-button">추가</button>
+                </div>
+              </div>
+              <div class="content-modify__attach-doc-container">
+                <span class="content-modify__attach-doc-title">첨부서류</span>
+                <div class="content-modify__attach-doc-checkbox-wrapper"></div>
+                <div class="content-modify__add-list-container">
+                  <span class="content-modify__add-list-title">목록 추가</span>
+                  <input
+                    type="text"
+                    class="content-modify__add-list-input attach"
+                    placeholder="텍스트 입력"
+                  />
+                  <button class="content-modify__add-list-button">추가</button>
+                </div>
+              </div>
+            </div>
+            <div class="content-modify__save-container">
+              <button class="content-modify__save-button">저장</button>
+            </div>
+          </div>
+        </section>
       </div>
     </div>
 
