admin 퍼블리싱 중 front로 넘어갈거임

--- a/templates/chatbot-admin/menu02.html
+++ b/templates/chatbot-admin/menu02.html
@@ -296,7 +296,9 @@
             <div class="content-modify__doc-list-container">
               <div class="content-modify__form-doc-container">
                 <span class="content-modify__form-doc-title">양식서류</span>
-                <div class="content-modify__form-doc-checkbox-wrapper"></div>
+
+                <!-- 사용 기록 테이블 (들어가야 됨) -->
+
                 <div class="content-modify__add-list-container">
                   <span class="content-modify__add-list-title">목록 추가</span>
                   <input
