--- a/static/chatbot-admin/css/menu02.css
+++ b/static/chatbot-admin/css/menu02.css
@@ -1,7 +1,7 @@
 .content-modify {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 70px);
   background-color: rgb(236, 240, 244);
 }
 
@@ -273,4 +273,34 @@
     background-color: #d4d4d4;
     color: #1b3133;
   }
+}
+
+.usage-history__table-item--checkbox {
+  width: 5%;
+  font-size: 12px;
+  white-space: nowrap;
+}
+
+.usage-history__table-item--list {
+  width: 30%;
+  font-size: 12px;
+  white-space: nowrap;
+}
+
+.usage-history__table-item--docs {
+  width: 35%;
+  font-size: 12px;
+  white-space: nowrap;
+}
+
+.usage-history__table-item--status {
+  width: 20%;
+  font-size: 12px;
+  white-space: nowrap;
+}
+
+.usage-history__table-item--delete {
+  width: 10%;
+  font-size: 12px;
+  white-space: nowrap;
 }
