front 홈, 시작페이지 퍼블리싱

--- a/templates/chatbot-front/index.html
+++ b/templates/chatbot-front/index.html
@@ -3,7 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>front</title>
+    <link rel="stylesheet" href="../../static/chatbot-front/css/index.css" />
+    <title>Index</title>
   </head>
-  <body></body>
+  <body>
+    <div class="index">
+      <div class="content">
+        <img
+          src="../../static/chatbot-front/images/logo.jpg"
+          alt="logo"
+          class="logo"
+        />
+        <div class="description__container">
+          <span class="description__text">안녕하세요. 비자24입니다.</span>
+          <span class="description__text"
+            >출입국 비자 업무에 필요한<br />서류정보, 비자24에서
+            확인하세요.</span
+          >
+          <span class="description__text">법무부출입국업무 대행기관</span>
+          <span class="description__text"
+            >수원국제행정사사무소에서<br />서류작성 및 업무대행도 한 번에<br />신청
+            가능합니다.</span
+          >
+        </div>
+        <a href="./chatbot.html" class="start-button">시작하기</a>
+      </div>
+    </div>
+  </body>
 </html>
